[gd_scene load_steps=2 format=3 uid="uid://byithe0nnbaa3"]

[ext_resource type="Script" path="res://Scripts/DecisionBox.gd" id="1_m2e8v"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_m2e8v")

[node name="PlayerInput" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.389
anchor_top = 0.3
anchor_right = 0.611
anchor_bottom = 0.688
offset_left = -0.128021
offset_top = -0.400009
offset_right = 0.127991
offset_bottom = 0.175995
grow_horizontal = 2
grow_vertical = 2

[node name="Decision1" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Worked?"

[node name="Decision2" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Working?"

[node name="Decision3" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Is this thing on?"

[connection signal="pressed" from="PlayerInput/Decision1" to="." method="_decision1"]
[connection signal="pressed" from="PlayerInput/Decision2" to="." method="_decision2"]
[connection signal="pressed" from="PlayerInput/Decision3" to="." method="_decision3"]
